unpackaged/objects/copado__Data_Change_Event_Condition_Items__c.object
<CustomObject>
	<customSettingsType>List</customSettingsType>
	<fields>
		<fullName>copado__Event_Condition_Id__c</fullName>
		<label>Event Condition Id</label>
		<length>18</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Filter_Condition__c</fullName>
		<label>Filter Condition</label>
		<required>true</required>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Filter_Order__c</fullName>
		<label>Filter Order</label>
		<precision>2</precision>
		<required>true</required>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<label>Copado Data Change Event Condition Items</label>
</CustomObject>